--- a/.github/workflows/Build Module - Windows.yml
+++ b/.github/workflows/Build Module - Windows.yml
@@ -5,7 +5,7 @@
 # https://help.github.com/en/actions/automating-your-workflow-with-github-actions/workflow-syntax-for-github-actions
 # https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-powershell
 # https://github.com/actions/upload-artifact#where-does-the-upload-go
-name: DLLPickle-Windows-pwsh
+name: Build Module (Windows)
 on:
   pull_request:
     paths-ignore:
@@ -23,28 +23,28 @@ jobs:
       fail-fast: false
     steps:
     - name: Check out repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v5
     - name: Display the path
       shell: pwsh
       run: echo ${env:PATH}
     - name: Version Display
       shell: pwsh
       run: $PSVersionTable
-    # uncomment below to explore what modules/variables/env variables are available in the build image
+    # Uncomment below to explore what modules/variables/env variables are available in the build image
     # - name: Modules and Variables Display
     #   shell: pwsh
     #   run: Get-Module -ListAvailable; (Get-Variable).GetEnumerator() | Sort-Object Name | Out-String; (Get-ChildItem env:*).GetEnumerator() | Sort-Object Name | Out-String
     - name: Bootstrap
       shell: pwsh
-      run: ./Actions_Bootstrap.ps1
+      run: ./.github/workflows/Actions_Bootstrap.ps1
     - name: Test and Build
       shell: pwsh
-      run: Invoke-Build -File .\src\DLLPickle.Build.ps1
+      run: Invoke-Build -File ./src/DLLPickle.Build.ps1
     - name: Upload pester results
       uses: actions/upload-artifact@v4
       with:
         name: pester-results
-        path: .\src\Artifacts\testOutput
+        path: ./src/Artifacts/TestOutput
         if-no-files-found: warn
     - name: Upload zip module archive build
       uses: actions/upload-artifact@v4
