--- a/.github/workflows/Build and Test (psake).yaml
+++ b/.github/workflows/Build and Test (psake).yaml
@@ -1,6 +1,6 @@
-name: CI
+name: Build and Run Tests (psake)
 on:
-  pull_request:
+  # pull_request:
   workflow_dispatch:
 permissions:
   contents: read
