--- a/.github/workflows/Update MSAL Packages.yml
+++ b/.github/workflows/Update MSAL Packages.yml
@@ -1,4 +1,4 @@
-name: MSAL Dependency Updater
+name: Update MSAL Packages
 
 on:
   schedule:
@@ -53,7 +53,7 @@ jobs:
           )
 
           # Set initial defaults.
-          $LibPath = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath "DLLPickle\Assembly"
+          $LibPath = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath "src/DLLPickle/Assembly"
           $UpdatesAvailable = $false
           $UpdateSummary = @()
 
@@ -125,7 +125,7 @@ jobs:
               }
           )
 
-          $LibPath = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath "DLLPickle\Assembly"
+          $LibPath = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath "src/DLLPickle/Assembly"
           New-Item -ItemType Directory -Path $LibPath -Force | Out-Null
 
           # Create temp directory
@@ -211,7 +211,7 @@ jobs:
         if: steps.check_packages.outputs.updates_available == 'true'
         shell: pwsh
         run: |
-          $ManifestPath = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath "DLLPickle\DLLPickle.psd1"
+          $ManifestPath = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath "src/DLLPickle/DLLPickle.psd1"
 
           # Read current manifest
           $Manifest = Import-PowerShellDataFile -Path $ManifestPath
