OK, I'll use lowercase for root directory names

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,7 +17,7 @@ mkdocs:
 
 python:
   install:
-    - requirements: Docs/requirements.txt
+    - requirements: docs/requirements.txt
 
 # # Build PDF & ePub
 formats: all
