Update labeler action to use main branch
Updated actions/labeler version to main for consistency.

--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -25,9 +25,10 @@ jobs:
           egress-policy: audit
 
       - name: Apply labels
-        uses: actions/labeler
+        uses: actions/labeler@main
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           sync-labels: true
+
 
 
