Change labeler action version in workflow
Updated labeler action version to v5.

--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -25,10 +25,11 @@ jobs:
           egress-policy: audit
 
       - name: Apply labels
-        uses: actions/labeler@main
+        uses: actions/labeler@v5
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           sync-labels: true
+
 
 
 
