--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -261,7 +261,7 @@ jobs:
 
     steps:
       - name: Label PR based on paths
-        uses: actions/labeler@25c86f8472ad78b6e3bd9eff3fc7c8d8e16cd4e1 # v5.0.0
+        uses: actions/labeler@v6.0.1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -290,3 +290,4 @@ jobs:
           "@
 
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value $summary
+
