Refactor labeler.yml for improved structure

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,12 +1,7 @@
-src/DLLPickle/**:
-  - source
-src/DLLPickle/Lib/**:
-  - dependencies
-  - source
-src/Tests/**:
-  - tests
-docs/**:
-  - documentation
+src/DLLPickle/**: source
+src/DLLPickle/Lib/**: dependencies, source
+src/Tests/**: tests
+docs/**: documentation
 ci:
   changed-files:
     - any-glob-to-any-files:
