Update labeler.yml to remove redundant entries

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,5 +1,5 @@
 src/DLLPickle/**: source
-src/DLLPickle/Lib/**: dependencies, source
+src/DLLPickle/Lib/**: dependencies
 src/Tests/**: tests
 docs/**: documentation
 ci:
