--- a/.github/workflows/DEPRECATED - Update Monitored Packages.yml
+++ b/.github/workflows/DEPRECATED - Update Monitored Packages.yml
@@ -1,9 +1,9 @@
 name: Update Monitored Packages
 
 on:
-  schedule:
-    # Check daily at 2 AM UTC
-    - cron: '0 2 * * *'
+  #schedule:
+  #  # Check daily at 2 AM UTC
+  #  - cron: '0 2 * * *'
   workflow_dispatch: # Allow manual triggering
 
 permissions:
