--- a/.github/workflows/2 - Build Module - Windows.yml
+++ b/.github/workflows/2 - Build Module - Windows.yml
@@ -48,7 +48,7 @@ jobs:
         path: |
           ~\Documents\PowerShell\Modules
           ~\Documents\WindowsPowerShell\Modules
-        key: ${{ runner.os }}-psmodules-${{ hashFiles('src/DLLPickle.build.ps1', '.github/workflows/Actions_Bootstrap.ps1') }}
+        key: ${{ runner.os }}-psmodules-${{ hashFiles('src/DLLPickle.Build.ps1', '.github/workflows/Actions_Bootstrap.ps1') }}
 
     - name: Bootstrap
       shell: pwsh
@@ -56,7 +56,7 @@ jobs:
 
     - name: Test and Build
       shell: pwsh
-      run: Invoke-Build -File ./src/DLLPickle.build.ps1
+      run: Invoke-Build -File ./src/DLLPickle.Build.ps1
 
     - name: Upload pester results
       if: always() # Ensure this step runs even if prior steps fail
