fix: Update parameter name in dependency check script

--- a/.github/workflows/1 - Update Dependencies.yml
+++ b/.github/workflows/1 - Update Dependencies.yml
@@ -53,7 +53,7 @@ jobs:
           foreach ($Package in $PackageTracking.packages) {
               $checkResult = & .\.github\scripts\Get-NuGetLatestVersion.ps1 `
                 -PackageName $Package.name `
-                -CurrentVersion $Package.version
+                -CheckVersion $Package.version
 
               if ($checkResult.UpdateAvailable) {
                   $UpdatesAvailable = $true
