fix: allow continuation on error for checks completion step

--- a/.github/workflows/1 - Update Dependencies.yml
+++ b/.github/workflows/1 - Update Dependencies.yml
@@ -219,6 +219,7 @@ jobs:
 
       - name: Wait for checks to complete
         if: steps.check_packages.outputs.updates_available == 'true'
+        continue-on-error: true
         shell: pwsh
         env:
           GH_TOKEN: ${{ secrets.PAT_CREATEPR }}
